--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -73,7 +73,7 @@
                 {% calc_remaining_projects project as remaining_count %}
                 {% calc_finished_percent finished_count remaining_count as finished_pct %}
                 {% if finished_count > 0 %}
-                    <h4><strong>Projects Retained:</strong> {{ retained_count|intcomma }}</h4>
+                    <h4><strong>Projects Retained:</strong> {{ retained_count|intcomma }} [<a href="{% url 'website:download_selected_projects' project.slug %}">download CSV</a>]</h4>
                     {% if not project.isDone %}
                         <div class="progress">
                             <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{ finished_pct }}" aria-valuemin="0" aria-valuemax="100" title="{{ finished_pct }}% complete" style="width: {{ finished_pct }}%">
