if renaming slug fails, reset the edit box

--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -188,6 +188,7 @@
             }).fail(function() {
                 $('#slugbox').show();
                 $('#slugform').hide();
+                setSlug(originalslug);
             });
         });
 
