--- a/website/templates/website/transforms/detail.html
+++ b/website/templates/website/transforms/detail.html
@@ -187,6 +187,7 @@
             }).fail(function() {
                 $('#slugbox').show();
                 $('#slugform').hide();
+                setSlug(originalslug);
             });
         });
 
