--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -188,7 +188,13 @@
             }).fail(function() {
                 $('#slugbox').show();
                 $('#slugform').hide();
+
                 setSlug(originalslug);
+
+                $('#slugname').animate({ opacity: 0 }, 'fast');
+                $('#slugname').animate({ opacity: 1 }, 'fast');
+                $('#slugname').animate({ opacity: 0 }, 'fast');
+                $('#slugname').animate({ opacity: 1 }, 'fast');
             });
         });
 
