update BGSU -> UNL

--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -28,10 +28,18 @@
         </div>
         <div class="row top-buffer">
             <div class="col-xs-4 col-md-2" align="center">
+                <img alt="UNL logo" src="https://cse.unl.edu/~rdyer/images/logos/unl.png" class="img-responsive"/>
+            </div>
+            <div class="col-xs-8 col-md-10">
+                <p>The prototype infrastructure is supported by a generous startup grant provided by the University of Nebraska&mdash;Lincoln to Dr. Robert Dyer.</p>
+            </div>
+        </div>
+        <div class="row top-buffer">
+            <div class="col-xs-4 col-md-2" align="center">
                 <img alt="BGSU logo" style="background-color: #ff6b00;" src="http://www.bgsu.edu/etc/designs/bgsu-edu/clientlibs/images/logo.png" class="img-responsive"/>
             </div>
             <div class="col-xs-8 col-md-10">
-                <p>The prototype infrastructure is supported by a generous startup grant provided by Bowling Green State University to Dr. Robert Dyer.</p>
+                <p>The prototype infrastructure was previously supported by a generous startup grant provided by Bowling Green State University to Dr. Robert Dyer.</p>
             </div>
         </div>
     </div>
