--- a/website/templates/website/policies/agreement/terms.html
+++ b/website/templates/website/policies/agreement/terms.html
@@ -145,7 +145,7 @@ warranty of any kind, either express or implied.</p>
 
 <h2>6. Intellectual Property Information</h2>
 
-<p>Copyright (c) 2019 Bowling Green State University, All Rights Reserved.</p>
+<p>Copyright (c) 2020 University of Nebraska&mdash;Lincoln, All Rights Reserved.</p>
 
 <p>For purposes of these Terms of Use, &quot;content&quot; is defined as any
 information, data, communications, software, photos, video, graphics, music,
@@ -326,7 +326,7 @@ Ohio with respect to such matters.</p>
 <p>All notices to a party shall be in writing and shall be made either via
 email or conventional mail. Notices to us must be sent to the attention of
 <a href="{% url 'website:people' %}">an admin</a>, if by email, or to PAClab,
-221 Hayes Hall, Bowling Green State University, Bowling Green, OH 43402 if by
+103E Avery Hall, University of Nebraska&mdash;Lincoln, Lincoln NE 68588 if by
 conventional mail. Notices to you may be sent to the address supplied by you as
 part of your Registration Data. In addition, we may broadcast notices or
 messages through the site to inform you of changes to the site or other matters
