--- a/website/templates/website/funding.html
+++ b/website/templates/website/funding.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row top-buffer">
             <div class="col-xs-4 col-md-2" align="center">
-                <img alt="UNL logo" src="https://cse.unl.edu/~rdyer/images/logos/unl.png" class="img-responsive"/>
+                <img alt="UNL logo" width="50%" src="https://cse.unl.edu/~rdyer/images/logos/unl.png" class="img-responsive"/>
             </div>
             <div class="col-xs-8 col-md-10">
                 <p>The prototype infrastructure is supported by a generous startup grant provided by the University of Nebraska&mdash;Lincoln to Dr. Robert Dyer.</p>
