Provide list of URLs for selection Fixes #86

--- a/website/templates/website/selections/create.html
+++ b/website/templates/website/selections/create.html
@@ -66,6 +66,11 @@
             </form><br>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12">
+            Or you can <a href="{% url 'website:create_manual_selection' %}">manually list all projects URLs to create a selection</a>.
+        </div>
+    </div>
 </div>
 {% endblock %}
 
