--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -6,9 +6,6 @@
 {% block body %}
     <div class="container">
         {% include 'website/messages.html' %}
-        {% if user.is_authenticated %}
-            <a href="{% url 'website:list_selections' %}">Back to all project selections</a><br/><br/>
-        {% endif %}
         {% if project.enabled %}
             {% if project.status == "READY" %}
                 <div class="alert alert-info" role="alert">This selection is currently in the queue and has not started processing yet.</div>
@@ -43,7 +40,8 @@
                 <div class="pull-right clearfix">
                     <div class="btn-group">
                         {% url 'website:selection_duplicate' slug=project.slug as targeturl %}
-                        {% include 'website/button.html' with disabled=False enabled=True type='default' icon='duplicate' text='' title='Duplicate' name='' %}
+                        {% can_duplicate project as candupe %}
+                        {% include 'website/button.html' with disabled=False enabled=candupe type='default' icon='duplicate' text='' title='Duplicate' name='' %}
                         {% url 'website:create_transform_selection' slug=project.slug as targeturl %}
                         {% include 'website/button.html' with disabled=False enabled=project.isDone type='success' icon='random' text='' title='Transform' name='' %}
                     </div>
