fix regression from d22354690689a10719203373e1ccf0f35b730c14 that broke editing slug names

--- a/website/templates/website/selections/detail.html
+++ b/website/templates/website/selections/detail.html
@@ -27,7 +27,7 @@
                             <button class="btn btn-xs btn-danger">Cancel</button>
                         </form>
                     {% endif %}
-                    <div id="slugbox" class="pull-right"><em id="slugname">{{ project.slug }}</em>{% if isowner %}{% include 'website/button.html' with name='editslug' targeturl='#' disabled=False enabled=True type='default btn-xs' icon='edit' text='' title='Rename' name='' %}{% endif %}</div>
+                    <div id="slugbox" class="pull-right"><em id="slugname">{{ project.slug }}</em>{% if isowner %}{% include 'website/button.html' with name='editslug' targeturl='#' disabled=False enabled=True type='default btn-xs' icon='edit' text='' title='Rename' %}{% endif %}</div>
                 </h1>
             </div>
             {% if project.parent %}
