--- a/website/templates/website/selections/inspect.html
+++ b/website/templates/website/selections/inspect.html
@@ -1,20 +1,20 @@
 {% extends 'website/base.html' %}
 {% load calc_finished_projects %}
-{% block title %}Projects{% endblock %}
+{% block title %}{{ view.inspect_kind }} Projects - {{ view.kwargs.slug }}{% endblock %}
 {% block body %}
     <div class="container-fluid" style="width: 90%">
         {% include 'website/messages.html' %}
-        <h1>Discovered Projects</h1>
+        <h1>{{ view.inspect_kind }} Projects - <a href="{% url 'website:selection_detail' slug=view.kwargs.slug %}">{{ view.kwargs.slug }}</a></h1>
         <div>({{ paginator.count }} total)</div>
-        <div class="pull-right"><a href="{% url 'website:selection_detail' slug=view.kwargs.slug %}">back to project selection</a></div>
-        <br/>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
                 <thead>
                     <tr>
-                        <th>Discovered Project URL</th>
-                        <th>Cloned?</th>
-                        <th>Retained?</th>
+                        <th>Project URL</th>
+                        <th>Cloned{% if view.inspect_kind == 'Discovered' %}?{% else %} On{% endif %}</th>
+                        {% if view.inspect_kind != 'Retained' %}
+                            <th>Retained?</th>
+                        {% endif %}
                         <th># of Commits</th>
                         <th># of Committers</th>
                         <th># of Source Files</th>
@@ -27,7 +27,9 @@
                         <tr>
                             <td>{{ paginator|item_num:page_obj }}. <a href="{{ project.snapshot.project.url }}" target="_blank">{{ project.snapshot.project.url }}</a></td>
                             <td>{% if project.is_cloned %}{{ project.snapshot.datetime_processed }}{% else %}False{% endif %}</td>
-                            <td>{{ project.retained }}</td>
+                            {% if view.inspect_kind != 'Retained' %}
+                                <td>{{ project.retained }}</td>
+                            {% endif %}
                             <td>{{ project.snapshot.commits }}</td>
                             <td>{{ project.snapshot.committers }}</td>
                             <td>{{ project.snapshot.src_files }}</td>
